project2/test/test_2_r08.out
Error type 8 at line 21: the function’s return value type mismatches the declared type
